--- a/config/scaffolding/SIQA_TESTGIT_120825Project.yml
+++ b/config/scaffolding/SIQA_TESTGIT_120825Project.yml
@@ -7,3 +7,12 @@ packages:
   gitUrl: https://github.com/rimabarman
   gitUsername: rimabarman
   gitBranch: main
+services:
+- serviceName: project.siqa_testgit_120825.integrations:AlertsCRTandERT
+  packages:
+  - name: SIQA_TESTGIT_120825Project
+    version: "1.0"
+- serviceName: pub.alert:emit
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
