--- a/config/scaffolding/SIQA_TESTGIT_120825Project.yml
+++ b/config/scaffolding/SIQA_TESTGIT_120825Project.yml
@@ -16,3 +16,19 @@ services:
   packages:
   - name: WmPublic
     version: 11.1.0.0.2077
+- serviceName: project.siqa_testgit_120825.integrations:deepclonetest
+  packages:
+  - name: SIQA_TESTGIT_120825Project
+    version: "1.0"
+- serviceName: pub.string:stringToBytes
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
+- serviceName: pub.utils:deepClone
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
+- serviceName: pub.string:bytesToString
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2077
