--- a/config/scaffolding/SIQA_TESTGIT_120825Project.yml
+++ b/config/scaffolding/SIQA_TESTGIT_120825Project.yml
@@ -12,6 +12,11 @@ packages:
   gitUrl: https://github.com/Karthik-V-IBM-10
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
+- name: SIQA_OriginTest_OnPremAssets
+  gitServerName: kvv
+  gitUrl: https://github.com/vijetadixit
+  gitUsername: Karthik-V-IBM-10
+  gitBranch: Test2
 services:
 - serviceName: project.siqa_testgit_120825.integrations:AlertsCRTandERT
   packages:
